src/objects/CustomObject12__c.object
<CustomObject>
    <fields>
        <fullName>Field10__c</fullName>
        <label>遗失/报废原因</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <formula>Field1__r.Field6__c</formula>
        <label>货号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>盘点日期</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>工具明细</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>GJMX-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>工具明细编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>工具明细</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>